--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ streamlit==1.29.0
 chromadb==0.4.22
 sentence-transformers==2.2.2
 groq==0.4.1
-torch==2.1.2
+torch>=2.9.0
 transformers==4.36.2
 numpy>=1.25.0
 
