--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.29.0
-chromadb==0.4.22
-sentence-transformers==2.2.2
-groq==0.4.1
-torch==2.1.2
-transformers==4.36.2
+streamlit
+chromadb
+sentence-transformers
+groq
+torch
+transformers
